[gd_scene load_steps=52 format=2]

[ext_resource path="res://src/Actor/Enemy/Bandit/Bandit.gd" type="Script" id=1]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_000.png" type="Texture" id=2]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_004.png" type="Texture" id=3]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_005.png" type="Texture" id=4]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_002.png" type="Texture" id=5]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_006.png" type="Texture" id=6]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_007.png" type="Texture" id=7]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_001.png" type="Texture" id=8]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_009.png" type="Texture" id=9]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_008.png" type="Texture" id=10]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_003.png" type="Texture" id=11]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_010.png" type="Texture" id=12]
[ext_resource path="res://asset/enemy/EnemyGuy/01-Idle/__Bandit02_Idle_011.png" type="Texture" id=13]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_006.png" type="Texture" id=14]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_000.png" type="Texture" id=15]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_001.png" type="Texture" id=16]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_003.png" type="Texture" id=17]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_007.png" type="Texture" id=18]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_005.png" type="Texture" id=19]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_002.png" type="Texture" id=20]
[ext_resource path="res://asset/enemy/EnemyGuy/02-Walk/__Bandit02_Walk_004.png" type="Texture" id=21]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_006.png" type="Texture" id=22]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_003.png" type="Texture" id=23]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_000.png" type="Texture" id=24]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_004.png" type="Texture" id=25]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_007.png" type="Texture" id=26]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_002.png" type="Texture" id=27]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_005.png" type="Texture" id=28]
[ext_resource path="res://asset/enemy/EnemyGuy/03-Attack/__Bandit02_Attack_001.png" type="Texture" id=29]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_004.png" type="Texture" id=30]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_001.png" type="Texture" id=31]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_007.png" type="Texture" id=32]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_002.png" type="Texture" id=33]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_000.png" type="Texture" id=34]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_003.png" type="Texture" id=35]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_006.png" type="Texture" id=36]
[ext_resource path="res://asset/enemy/EnemyGuy/08-Die/__Bandit02_Die_005.png" type="Texture" id=37]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_005.png" type="Texture" id=38]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_004.png" type="Texture" id=39]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_001.png" type="Texture" id=40]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_002.png" type="Texture" id=41]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_000.png" type="Texture" id=42]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_006.png" type="Texture" id=43]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_007.png" type="Texture" id=44]
[ext_resource path="res://asset/enemy/EnemyGuy/07-Hurt/__Bandit02_Hurt_003.png" type="Texture" id=45]
[ext_resource path="res://asset/healthbar/health_bar_enemy_1.png" type="Texture" id=46]
[ext_resource path="res://asset/healthbar/heatl_bar_enemy_3.png" type="Texture" id=47]
[ext_resource path="res://asset/healthbar/health_bar_enemy_2.png" type="Texture" id=48]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 18 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 30 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 32 ) ],
"loop": true,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 26 ) ],
"loop": true,
"name": "attack",
"speed": 20.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "hurt",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 146.913, 167.797 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 68.1468, 149.233 )

[node name="Bandit" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
z_index = 2
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_left = -67.4527
margin_top = -276.579
margin_right = -2.4527
margin_bottom = -259.579
rect_scale = Vector2( 2, 2 )
value = 100.0
texture_under = ExtResource( 46 )
texture_over = ExtResource( 48 )
texture_progress = ExtResource( 47 )
tint_over = Color( 1, 1, 1, 0 )
tint_progress = Color( 0.713726, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorLeftDetect" type="RayCast2D" parent="."]
position = Vector2( -150, 0 )
enabled = true
cast_to = Vector2( 0, 170 )
collision_mask = 4

[node name="FloorRightDetect" type="RayCast2D" parent="."]
position = Vector2( 150, 0 )
enabled = true
cast_to = Vector2( 0, 170 )
collision_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 2 )

[node name="AreaAttack" type="Area2D" parent="."]
position = Vector2( 100, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
modulate = Color( 0.313726, 0.0313726, 0.0588235, 1 )
position = Vector2( 0, -17.7979 )
shape = SubResource( 3 )

[node name="SwordAttack" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwordAttack"]
polygon = PoolVector2Array( 137.287, 125.517, 297.972, 104.328, 284.879, -141.214, 156.711, -157.006 )
disabled = true

[node name="UpdateTween" type="Tween" parent="."]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_AreaAttack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_AreaAttack_body_exited"]
[connection signal="body_entered" from="SwordAttack" to="." method="_on_SwordAttack_body_entered"]
